--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://bragenr.com"
+baseURL = "https://brage-blog.pages.dev/"
 title = "Brage N. Reitan"
 
 [params]
-name = 'Brage'
+name = 'Brage Nesteby Reitan'
