--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "https://brage-blog.pages.dev/"
 title = "Brage N. Reitan"
 
 [params]
-name = 'Brage Nesteby Reitan'
+name = 'Brage N. Reitan'
