--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://bragenr.com/"
-title = "Brage N. Reitan Cybersikkerhet-student"
+title = "Brage N. Reitan"
 enableRobotsTXT = true
 
 [params]
